force-app/main/default/objects/UA_Sample_Details__c/UA_Sample_Details__c.object-meta.xml
<CustomObject>
    <label>UA Sample Detail</label>
    <nameField>
        <displayFormat>Lab Order-{0000}</displayFormat>
        <label>Lab Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UA Sample Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>