force-app/main/default/objects/UA_Sample_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UA Sample Details</relationshipLabel>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>