force-app/main/default/objects/UA_Sample_Details__c/fields/Additives_if_Any__c.field-meta.xml
<CustomField>
    <fullName>Additives_if_Any__c</fullName>
    <label>Additives,if Any</label>
    <length>255</length>
    <type>Text</type>
</CustomField>