force-app/main/default/objects/UA_Sample_Details__c/fields/Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Result__c</fullName>
    <label>Analysis Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>