force-app/main/default/objects/UA_Sample_Details__c/fields/Available_Test__c.field-meta.xml
<CustomField>
    <fullName>Available_Test__c</fullName>
    <label>Available Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female Admission Panel - (Custom Profile)</fullName>
            </value>
            <value>
                <fullName>Female Alcohol Panel - (Custom Profile)</fullName>
            </value>
            <value>
                <fullName>Iron Deficiency Panel - (Custom Profile)</fullName>
            </value>
            <value>
                <fullName>Male Admission Panel - (Custom Profile)</fullName>
            </value>
            <value>
                <fullName>Male Alcohol Panel - (Custom Profile)</fullName>
            </value>
            <value>
                <fullName>Thyroid Panel - (Custom Profile)</fullName>
            </value>
            <value>
                <fullName>DRUG SCREEN 12 - (BIOREFERENCE LABORATORIES) - (Urine) [F362-9]</fullName>
            </value>
            <value>
                <fullName>DRUG SCREEN 12 W/ALCOHOL - (BIOREFERENCE LABORATORIES) - (Urine) [H790-9]</fullName>
            </value>
            <value>
                <fullName>EXPANDED 18-DRUG EIA SCREEN + ALCOHOL WITH REFLEX CONFIRMATION OF POSITIVES - (ALERE TOXICOLOGY SERVICES) - (Urine) [1203]</fullName>
            </value>
            <value>
                <fullName>FTL POC - (POC Performed at Facility) - (Other) [FTLPOC]</fullName>
            </value>
            <value>
                <fullName>Lakeworth POC - (POC Performed at Facility) - (Other) [LakeworthPOC]</fullName>
            </value>
            <value>
                <fullName>13Q14.3 BY FISH-TC ONLY - (BIOREFERENCE LABORATORIES) - (Other) [A878-1]</fullName>
            </value>
            <value>
                <fullName>14-3-3 ETA Protein - (BIOREFERENCE LABORATORIES) - (Other) [B677-6]</fullName>
            </value>
            <value>
                <fullName>14-DRUG EIA SCREEN WITH REFLEX CONFIRMATION OF POSITIVES - (ALERE TOXICOLOGY SERVICES) - (Urine) [1232]</fullName>
            </value>
            <value>
                <fullName>15q Del Characterization, FISH - (BIOREFERENCE LABORATORIES) - (Other) [B796-4]</fullName>
            </value>
            <value>
                <fullName>17P13 BY FISH-TC ONLY - (BIOREFERENCE LABORATORIES) - (Other) [A874-0]</fullName>
            </value>
            <value>
                <fullName>1P/19Q,D(1;19)DELETION BY FISH - (BIOREFERENCE LABORATORIES) - (Other) [A311-3]</fullName>
            </value>
            <value>
                <fullName>1Q21 BY FISH-TC ONLY - (BIOREFERENCE LABORATORIES) - (Other) [A876-5]</fullName>
            </value>
            <value>
                <fullName>20Q12 BY FISH-TC ONLY - (BIOREFERENCE LABORATORIES) - (Other) [A871-6]</fullName>
            </value>
            <value>
                <fullName>2,3-dinor 11B-Prostaglandin F2a, U - (BIOREFERENCE LABORATORIES) - (Urine) [A983-9]</fullName>
            </value>
            <value>
                <fullName>3-Alpha Androstanediol-G - (BIOREFERENCE LABORATORIES) - (Other) [1613-9]</fullName>
            </value>
            <value>
                <fullName>4K Prostate Score (Serum) - (BIOREFERENCE LABORATORIES) - (Other) [J148-8]</fullName>
            </value>
            <value>
                <fullName>4K PSA rflx &amp;gt;3.0 - (BIOREFERENCE LABORATORIES) - (Other) [J264-3]</fullName>
            </value>
            <value>
                <fullName>4K PSA Total + Free Reflex &amp;gt;3.0 to 4Kscore - (BIOREFERENCE LABORATORIES) - (Other) [K135-4]</fullName>
            </value>
            <value>
                <fullName>-5/5Q- BY FISH-TC ONLY - (BIOREFERENCE LABORATORIES) - (Other) [A869-0]</fullName>
            </value>
            <value>
                <fullName>5-Flucytosine, S - (BIOREFERENCE LABORATORIES) - (Other) [6180-4]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>