force-app/main/default/objects/UA_Sample_Details__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>