force-app/main/default/objects/UA_Sample_Details__c/fields/Collection_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Collection_Datetime__c</fullName>
    <label>Collection Datetime</label>
    <type>DateTime</type>
</CustomField>