force-app/main/default/objects/UA_Sample_Details__c/fields/Comment_1__c.field-meta.xml
<CustomField>
    <fullName>Comment_1__c</fullName>
    <description>Comment for first approval level</description>
    <label>Comment 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>