force-app/main/default/objects/UA_Sample_Details__c/fields/Comment_2__c.field-meta.xml
<CustomField>
    <fullName>Comment_2__c</fullName>
    <description>Comment for second approval level</description>
    <label>Comment 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>