force-app/main/default/objects/UA_Sample_Details__c/fields/Comment_3__c.field-meta.xml
<CustomField>
    <fullName>Comment_3__c</fullName>
    <description>Comment for third approval level</description>
    <label>Comment 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>