force-app/main/default/objects/UA_Sample_Details__c/fields/ContainerSize__c.field-meta.xml
<CustomField>
    <fullName>ContainerSize__c</fullName>
    <label>ContainerSize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>