force-app/main/default/objects/UA_Sample_Details__c/fields/ContainerType__c.field-meta.xml
<CustomField>
    <fullName>ContainerType__c</fullName>
    <label>ContainerType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>