force-app/main/default/objects/UA_Sample_Details__c/fields/Date_Of_Approval_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Approval_1__c</fullName>
    <description>DateTime at which first level was approved</description>
    <label>Date Of Approval 1</label>
    <type>DateTime</type>
</CustomField>