force-app/main/default/objects/UA_Sample_Details__c/fields/Date_Of_Approval_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Approval_2__c</fullName>
    <description>DateTime at which second level was approved</description>
    <label>Date Of Approval 2</label>
    <type>DateTime</type>
</CustomField>