force-app/main/default/objects/UA_Sample_Details__c/fields/Date_Of_Approval_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Approval_3__c</fullName>
    <description>DateTime at which third level was approved</description>
    <label>Date Of  Approval 3</label>
    <type>DateTime</type>
</CustomField>