force-app/main/default/objects/UA_Sample_Details__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once</fullName>
                <default>true</default>
                <label>Once</label>
            </value>
            <value>
                <fullName>Every Day</fullName>
            </value>
            <value>
                <fullName>Every 2 Days</fullName>
            </value>
            <value>
                <fullName>Every 3 Days</fullName>
            </value>
            <value>
                <fullName>Every 5 Days</fullName>
            </value>
            <value>
                <fullName>Every 7 Days</fullName>
            </value>
            <value>
                <fullName>Every 2 weeks</fullName>
            </value>
            <value>
                <fullName>Once a month</fullName>
            </value>
            <value>
                <fullName>On return from pass or outing</fullName>
            </value>
            <value>
                <fullName>When attending IOP/OP group</fullName>
            </value>
            <value>
                <fullName>Confirm positive analyzer results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>