force-app/main/default/objects/UA_Sample_Details__c/fields/Is_File_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_File_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It will be true when the record has a file attached to it.</inlineHelpText>
    <label>Is File Created?</label>
    <type>Checkbox</type>
</CustomField>