force-app/main/default/objects/UA_Sample_Details__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>UA Sample Details</relationshipLabel>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>