force-app/main/default/objects/UA_Sample_Details__c/fields/Lab_Code__c.field-meta.xml
<CustomField>
    <fullName>Lab_Code__c</fullName>
    <label>Lab Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>