force-app/main/default/objects/UA_Sample_Details__c/fields/Lab_email__c.field-meta.xml
<CustomField>
    <fullName>Lab_email__c</fullName>
    <label>Lab email</label>
    <type>Email</type>
</CustomField>