force-app/main/default/objects/UA_Sample_Details__c/fields/Lab_Location__c.field-meta.xml
<CustomField>
    <fullName>Lab_Location__c</fullName>
    <label>Lab Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>