force-app/main/default/objects/UA_Sample_Details__c/fields/Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Test</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Lab Test</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>UA Sample Details</relationshipLabel>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>