force-app/main/default/objects/UA_Sample_Details__c/fields/Laboratory_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Analysis_Date__c</fullName>
    <label>Laboratory Analysis Date</label>
    <type>Date</type>
</CustomField>