force-app/main/default/objects/UA_Sample_Details__c/fields/Medical_Test__c.field-meta.xml
<CustomField>
    <fullName>Medical_Test__c</fullName>
    <label>Medical Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>