force-app/main/default/objects/UA_Sample_Details__c/fields/Name_of_container__c.field-meta.xml
<CustomField>
    <fullName>Name_of_container__c</fullName>
    <label>Name of container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>