force-app/main/default/objects/UA_Sample_Details__c/fields/Necessity_Details__c.field-meta.xml
<CustomField>
    <fullName>Necessity_Details__c</fullName>
    <label>Necessity Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>