force-app/main/default/objects/UA_Sample_Details__c/fields/On_Admission__c.field-meta.xml
<CustomField>
    <fullName>On_Admission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Admission</label>
    <type>Checkbox</type>
</CustomField>