force-app/main/default/objects/UA_Sample_Details__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UA_Sample_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>