force-app/main/default/objects/UA_Sample_Details__c/fields/Order_to__c.field-meta.xml
<CustomField>
    <fullName>Order_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>