force-app/main/default/objects/UA_Sample_Details__c/fields/Ordered_Via__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Via__c</fullName>
    <label>Ordered Via</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone, read back and verified</fullName>
            </value>
            <value>
                <fullName>Verbal, read back and verified</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Previously prescribed medication approved by doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>