force-app/main/default/objects/UA_Sample_Details__c/fields/Ordering_Physician__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordering Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UA Sample Details</relationshipLabel>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>