force-app/main/default/objects/UA_Sample_Details__c/fields/Patient_notified__c.field-meta.xml
<CustomField>
    <fullName>Patient_notified__c</fullName>
    <label>Patient notified</label>
    <type>DateTime</type>
</CustomField>