force-app/main/default/objects/UA_Sample_Details__c/fields/Physical_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Physical_Analysis_Date__c</fullName>
    <label>Physical Analysis Date</label>
    <type>Date</type>
</CustomField>