force-app/main/default/objects/UA_Sample_Details__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>LabOrder</fullName>
                <isActive>false</isActive>
                <label>LabOrder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>