force-app/main/default/objects/UA_Sample_Details__c/fields/Signature_Comments__c.field-meta.xml
<CustomField>
    <fullName>Signature_Comments__c</fullName>
    <label>Signature Comments</label>
    <type>TextArea</type>
</CustomField>