force-app/main/default/objects/UA_Sample_Details__c/fields/Signature_Link__c.field-meta.xml
<CustomField>
    <fullName>Signature_Link__c</fullName>
    <label>Signature Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>