force-app/main/default/objects/UA_Sample_Details__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <label>Signed Date</label>
    <type>TextArea</type>
</CustomField>