force-app/main/default/objects/UA_Sample_Details__c/fields/Specimen_Collector__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Collector__c</fullName>
    <label>Specimen Collector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>