force-app/main/default/objects/UA_Sample_Details__c/fields/Specimen_Condition__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Condition__c</fullName>
    <label>Specimen Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>