force-app/main/default/objects/UA_Sample_Details__c/fields/Specimen_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Quantity__c</fullName>
    <label>Specimen Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>