force-app/main/default/objects/UA_Sample_Details__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Results Received</fullName>
            </value>
            <value>
                <fullName>Final Order</fullName>
            </value>
            <value>
                <fullName>Draft Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>