force-app/main/default/objects/UA_Sample_Details__c/fields/UA_Sample_Details__c.field-meta.xml
<CustomField>
    <fullName>UA_Sample_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UA Sample Details</label>
    <referenceTo>UA_Sample_Details__c</referenceTo>
    <relationshipLabel>UA Sample Details</relationshipLabel>
    <relationshipName>UA_Sample_Details</relationshipName>
    <type>Lookup</type>
</CustomField>