force-app/main/default/objects/UA_Sample_Details__c/fields/User_1__c.field-meta.xml
<CustomField>
    <fullName>User_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to of first approver</description>
    <label>User 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UA_Sample_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>