force-app/main/default/objects/UA_Sample_Details__c/fields/User_2__c.field-meta.xml
<CustomField>
    <fullName>User_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to second approver</description>
    <label>User 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UA_Sample_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>