force-app/main/default/objects/UA_Sample_Details__c/fields/User_3__c.field-meta.xml
<CustomField>
    <fullName>User_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to third approver</description>
    <label>User 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UA_Sample_Details4</relationshipName>
    <type>Lookup</type>
</CustomField>