force-app/main/default/objects/UA_Sample_Details__c/recordTypes/Lab_Order.recordType-meta.xml
<RecordType>
    <fullName>Lab_Order</fullName>
    <active>true</active>
    <label>Lab Order</label>
</RecordType>