force-app/main/default/objects/UA_Sample_Details__c/recordTypes/Urine_Analysis.recordType-meta.xml
<RecordType>
    <fullName>Urine_Analysis</fullName>
    <active>true</active>
    <label>Urine Analysis</label>
</RecordType>