force-app/main/default/objects/UA_Sample_Details__c/validationRules/Fields_not_editable_once_status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_not_editable_once_status_change</fullName>
    <active>true</active>
    <description>Fields should not be editable once the status changes to final or result</description>
    <errorConditionFormula>if( AND(  OR(ISPICKVAL(Status__c, &quot;Final Order&quot;),ISPICKVAL(Status__c, &quot;Results Received&quot;) ) , NOT(ISCHANGED(Status__c)))  , true, false)</errorConditionFormula>
    <errorMessage>You cannot edit a completed lab order</errorMessage>
</ValidationRule>